[tool.poetry]
name = "pytimeline-app"
version = "0.1.0"
description = ""
authors = ["Carlos Matías de la Torre <cmdelatorre@gmail.com>"]
readme = "README.md"
packages = [{include = "pytimeline_app"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
